fix spacing issues

--- a/src/pages/reviews/details/index.css
+++ b/src/pages/reviews/details/index.css
@@ -15,6 +15,10 @@
   margin-top: 10px;
 }
 
+.removeAdsButton {
+  margin-left: 10px;
+}
+
 @media only screen and (max-width: 1200px) {
   .reviewCard {
     padding: 20px 40px;
